<resources>
    <string name="app_name">MovieDb Fragments</string>

    <string name="movies">Movies</string>
    <string name="details">Details</string>
    <string name="search">Search</string>
    <string name="movie_backdrop">Movie Backdrop</string>
    <string name="genres_with_text">Genres: %1$s</string>
    <string name="not_available">Not available</string>
    <string name="retry">Retry</string>
    <string name="no_results">No results…</string>
    <string name="something_went_wrong">Something went wrong…</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="rating_with_text">Rating: %1$.1f (%2$d votes)</string>
    <string name="hours_and_minutes">Runtime: %1$dh %2$dm</string>
</resources>