<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="0dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_movie_details"
                android:layout_width="match_parent"
                android:layout_height="?android:attr/actionBarSize"
                android:elevation="0dp"
                app:contentInsetStartWithNavigation="0dp"
                app:navigationIcon="?attr/homeAsUpIndicator"
                app:title="@string/details" />
        </com.google.android.material.appbar.AppBarLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?android:attr/actionBarSize">

            <ScrollView
                android:id="@+id/view_movie_details"
                android:layout_width="match_parent"
                android:paddingBottom="20dp"
                android:clipToPadding="false"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_title"
                        style="@style/TextAppearance.Material3.TitleLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        tools:text="Joker: Folie à Deux" />

                    <ImageView
                        android:id="@+id/iv_movie_backdrop"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="10dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/movie_backdrop"
                        android:scaleType="fitCenter" />

                    <TextView
                        android:id="@+id/tv_genres"
                        style="@style/TextAppearance.Material3.LabelLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Genres: Drama, Action" />

                    <TextView
                        android:id="@+id/tv_runtime"
                        style="@style/TextAppearance.Material3.LabelLarge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="Runtime: 2h 18m" />

                    <TextView
                        android:id="@+id/tv_overview"
                        style="@style/TextAppearance.Material3.BodyMedium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        tools:text="Failed comedian Arthur Fleck meets the love of his life, Harley Quinn, while incarcerated at Arkham State Hospital." />
                </LinearLayout>

            </ScrollView>

            <LinearLayout
                android:id="@+id/view_something_is_wrong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                tools:visibility="gone"
                android:orientation="vertical">

                <TextView
                    style="@style/TextAppearance.Material3.BodyLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/something_went_wrong" />

                <Button
                    android:id="@+id/button_retry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/retry" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                tools:visibility="gone" />
        </FrameLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>